--- a/src/output.css
+++ b/src/output.css
@@ -639,6 +639,11 @@
       margin-top: calc(var(--spacing) * 20);
     }
   }
+  .sm\:hidden {
+    @media (width >= 40rem) {
+      display: none;
+    }
+  }
   .sm\:h-80 {
     @media (width >= 40rem) {
       height: calc(var(--spacing) * 80);
