--- a/src/output.css
+++ b/src/output.css
@@ -211,6 +211,9 @@
   .visible {
     visibility: visible;
   }
+  .absolute {
+    position: absolute;
+  }
   .mx-auto {
     margin-inline: auto;
   }
