--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-.class1:hover {
+/* .class1:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
@@ -19,4 +19,4 @@
 }
 .hidden1{
     display:none;
-}
+} */
