--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,3 @@
-/* .class1:hover {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-
+.card:hover{
+    background-color: aqua;
 }
-
-.class2:hover {
-    background-color: rgb(209, 135, 25);
-    color: black;
-}
-/* 
-.class3:hover {
-    display: none;
-} */
-
-.hovered {
-    background: red;
-}
-.hidden1{
-    display:none;
-} */
